[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/CollectableManager.gd" type="Script" id=1]

[node name="CollectableManager" type="Node"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="SpawnTopLeft" type="Position2D" parent="."]
position = Vector2( 2100, 100 )

[node name="SpawnBottomRight" type="Position2D" parent="."]
position = Vector2( 2500, 980 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
